Put some more thought into towns & creatures, gonna start updating thoughts on RPG overworld maps soon.

--- a/Castles_and_Creatures.html
+++ b/Castles_and_Creatures.html
@@ -102,8 +102,8 @@
 	<li>Ultimate: Spirit Guardian - +2 Luck to all native allied heroes, +1 to other allied heroes. Raises luck cap
 			to +4 at Mas Luck instead of GM.</li>
 	<li><strong>Uniques</strong></li>
-	<li>Centaur Paddock: +4/wk Centaur growth, requires Centaur Stables, 500g5w</li>
-	<li>Archery Range: +2/wk Elf Archer growth, requires Elf Cottage, Timber Guild, 1000g5o</li>
+	<li>Centaur Paddock: +4/wk Centaur growth, requires Centaur Stables, 1000g</li>
+	<li>Archery Range: +2/wk Elven Archer growth, requires Elf Cottage, Timber Guild, 2000g</li>
 	<li>Timber Guild: up to +2 wood from lumber mills/day (+1 per lumber mill per Timber Guild, each lumber mill can be
 			boosted to a max of 4/day), requires City Hall, 2000g+5w</li>
 	<li>Precious Stockpile: +10% interest on selected resource at the start of the week, must be chosen before day 7,
@@ -122,7 +122,7 @@
 	<li>Halfling Slingers/Halfling Guerillas (ranged, tougher than H3C)</li>
 	<li>Centaur Lancers/Centaur Stampeders (jousting bonus)</li>
 	<li>Dwarven Warriors (ranged attacks/spells downgraded 1 Crit category (2 when defensive stance taken))</li>
-	<li>Elf Archers/Elf Rangers (ranged, 24 shots, both shoot 2x per turn, upg. +1 luck floor)</li>
+	<li>Elven Archers/Elven Longbowers (name?, ranged, 24 shots, both shoot 2x per turn, upg. +1 luck floor)</li>
 	<li>Pegasus Fencers/Pegasus Cuirassiers (jousting bonus, upg. has strike-and-return (alt can strike & stay))</li>
 	<li>Unicorns/War Unicorns (aura of magic resist to army, chance to Vision1 on atk (upg. Pacify2))</li>
 	<li>Green Dragons/Gold Dragons (Flying, breath atk (alt), high magic resistance (upg. very high))</li>
@@ -138,28 +138,32 @@
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>Sculptor's Studio: +4/wk Gargoyle growth. Requires: Parapet</li>
+	<li>Lamp Cistern (name): +2/wk Genie growth. Requires: Altar of Wishes</li>
+	<li>Library: Hero can get +1 know/sp 1 time or free upgrade of a magical skill 1 time (skill requirements must be
+	    met & skill must be able to be taught at that town/by that hero's scholars). Requires: Adv. Mage Guild + Mage
+	    Tower.</li>
+	<li>Lookout Tower: Permanently increases visible range around the town to 20 squares. When Adv. Mage Guild is
+			built, applies Wizard eye to the revealed area. Requires: Citadel.</li>
 	<li><strong>Dwellings</strong></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>Workshop</li>
+	<li>Parapet</li>
+	<li>Golem Factory</li>
+	<li>Mage Tower</li>
+	<li>Altar of Wishes</li>
+	<li>Golden Pavilion</li>
+	<li>Golden Temple</li>
 </ul>
 <h4>Creatures</h4>
 <ol>
-	<li>Gremlins (ranged for upgraded)</li>
-	<li>Gargoyles</li>
-	<li>Golems</li>
-	<li>Genies (moved down)</li>
-	<li>Magi (moved up)</li>
-	<li>Nagas?</li>
-	<li>Giants/Titans</li>
+	<li>Gremlin Peons/Gremlin Workers (upg. ranged, 4 shots)</li>
+	<li>Stone Gargoyles/Marble Gargoyles (flying, fast, low hp but high magic resist)</li>
+	<li>Stone Golems/Marble Golems (slow, high hp & high magic resist)</li>
+	<li>Magi/Arcane Magi (ranged, 24 shots, high elemental damage, picks from lowest of target's 4 resists)</li>
+	<li>Genies (very fast, air or water ele dmg, picks from lowest resist, med magic resist)</li>
+	<li>Nagas/Naga Warriors (high phys dmg, no magic resist, high hp & atk/def)</li>
+	<li>Giants/Titans (like H3C, but carry a phys sword for melee combat like MM7C, and Titans summon the lightning
+			bolt for ranged attack, which does air dmg. No distance penalty for ranged (castle wall still applies))</li>
 </ol>
 <h3>Stronghold</h3>
 <h4>General Info</h4>
@@ -169,31 +173,36 @@
 	<li>Magic Affiliations: +Fire, Spirit / -Air</li>
 	<li>Native Terrains: </li>
 	<li>Native Heroes: Barbarian, Warrior Mage</li>
-	<li><em>Updates:</em> </li>
-	<li>Ultimate: </li>
+	<li><em>Updates:</em> Wolf Riders switched out for Wolves & swapped spots with Orcs. Ogres 2 choices for upgrades
+	(both can be built if desired, building 1 does not lock out the other).</li>
+	<li>Ultimate: Warlord's Monument - +10Atk/Def to all heroes in town, +2Atk/Def for 1 week for heroes that visit
+			town & leave (like stables again)</li>
 	<li><strong>Uniques</strong></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>Mess Hall: +8/wk Goblin growth. Requires: Goblin Barracks</li>
+	<li>Armory: +3/wk Ogre growth. Requires: Ogre Fort, Blacksmith Guild</li>
+	<li>Hall of Valhalla: 1 time/hero: +1atk or def, or 1 upg to a combat skill that can be learned. Requires: City
+			Hall + Ogre Fort</li>
+	<li>Scout Depot: Gives to visiting hero for 1 week +2 squares scouting (similar to how stables work) Requires:
+			Citadel</li>
 	<li><strong>Dwellings</strong></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>Goblin Barracks</li>
+	<li>Orc Tower</li>
+	<li>Wolf Pen</li>
+	<li>Ogre Fort</li>
+	<li>Cliff Nest</li>
+	<li>Cyclops Cave</li>
+	<li>Behemoth Lair</li>
 </ul>
 <h4>Creatures</h4>
 <ol>
-	<li>Goblin Infantry</li>
-	<li>Orc Axe Throwers (moved down)</li>
-	<li>Wolves (moved up, replaces wolf riders)</li>
-	<li>Ogres (spec into either warriors or magi)</li>
-	<li>Rocs</li>
-	<li>Cyclopses</li>
-	<li>Behemoths</li>
+	<li>Goblin Troops/Goblin Infantry</li>
+	<li>Orc Axe Throwers/Orc Axe Hurlers (slow, tough, ranged, 12 shots, upg better dmg)</li>
+	<li>Wolves/Dire Wolves (fast, high phys dmg, upg. attacks twice)</li>
+	<li>Ogre Brutes/Ogre Warriors or Ogre Magi (can choose either, Warriors get speed/atk/hp upgrade, Magi get def
+			upg+spellcasting abilities)</li>
+	<li>Rocs/Roc Predators (very fast, flying, tough, bonus dmg against beasts)</li>
+	<li>Cyclopses /Cyclops Warriors (med fast, ranged, tough, can attack castle walls (1dmg reg/2dmg upg))</li>
+	<li>Behemoths/Behemoth Razorclaws (faster than H3C by a bit, base tankier)</li>
 </ol>
 <h3>Fortress</h3>
 <h4>General Info</h4>
@@ -206,28 +215,29 @@
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>Gnoll Cots: +6/wk Gnoll growth. Requires: Gnoll Hut</li>
+	<li>Heated Dens: +4/wk Lizard grwoth. Requires: Lizard Den</li>
+	<li>Glyphs of Fear: +2atk/def to heroes in town. Requires: Citadel</li>
+	<li>Hall of Scribes: Increases the learning cap for Other Skills (non-might/non-magic) by +1 for heroes in town,
+			and allows each hero 1 time to upgrade an Other Skill for free.</li>
 	<li><strong>Dwellings</strong></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>Gnoll Hut</li>
+	<li>Fly Hive</li>
+	<li>Lizard Den</li>
+	<li>Basilisk Pit</li>
+	<li>Gorgon Lair</li>
+	<li>Wyvern Nest</li>
+	<li>Hydra Pond</li>
 </ul>
 <h4>Creatures</h4>
 <ol>
-	<li>Gnolls</li>
-	<li>Serpent flies (moved down)</li>
-	<li>Lizard Archers (moved up)</li>
-	<li>Basilisks</li>
-	<li>Gorgons</li>
-	<li>Wyverns (should be tougher)</li>
-	<li>Hydras (should be tougher)</li>
+	<li>Gnolls/Gnoll Marauders</li>
+	<li>Serpent Flies/Dragon Flies (flying, less fast than H3C, no dispel/weakness, tough, upg has bonus fire dmg.)</li>
+	<li>Lizard Archers/Lizard Marksmen (ranged, 12(upg 24) shots, upg. better dmg/hp/def)</li>
+	<li>Basilisks/Greater Basilisks (10% (20% upg) turn to stone chance per hit, measured against earth res)</li>
+	<li>Gorgons/Mighty Gorgons (high def,hp , switch speeds with basilisk, no magic resist)</li>
+	<li>Wyverns/Venomous Wyverns (tough, very fast, flying, upg. poisons on crit (poison1 crit/poison2 slayer))</li>
+	<li>Hydras (slow, very tough, high def, atk all, no retaliation)</li>
 </ol>
 <h3>Conflux</h3>
 <h4>General Info</h4>
