--- a/Races.html
+++ b/Races.html
@@ -115,7 +115,7 @@
 <h3>Might-Focused</h3>
 <ul>
   <li>Ranger (Basic)</li>
-  <li>Hunter - Marksman or Sniper</li>
+  <li>Hunter - Sniper</li>
   <li>Dungeonkeeper - Overlord</li>
   <li>Demon General - Demon Lord</li>
   <li>Mechanic - Engineer</li>
