--- a/Status.html
+++ b/Status.html
@@ -28,6 +28,7 @@
   <tr><td>Fear</td><td>Mind</td><td>Afraid</td><td>Intimidated</td><td>Terrified</td></tr>
   <tr><td>Curse</td><td>Spirit</td><td>Jinxed</td><td>Cursed</td><td>Hexed</td></tr>
   <tr><td>Fatigue</td><td>Life/Death</td><td>Weary</td><td>Fatigued</td><td>Completely Drained</td></tr>
+  <tr><td>Turn to Stone</td><td>Earth</td><td>n/a</td><td>n/a</td><td>Turned to Stone</td></tr>
 </table>
 </body>
 </html>
