Put some thought into the geographic areas.

--- a/Castles_and_Creatures.html
+++ b/Castles_and_Creatures.html
@@ -57,7 +57,7 @@
 	<li>Alignment: "Progress"</li>
 	<li>Territories Represented: Erathia</li>
 	<li>Magic Affiliations:+Life, Spirit / -Death</li>
-	<li>Native Terrains: Grass, Dirt</li>
+	<li>Native Terrains: Grassland, Dirt</li>
 	<li>Native Heroes: Knight, Cleric</li>
 	<li><em>Updates:</em> Res silo should now produce +1gem/day instead of 1wd/1ore, Swordsmen are now lvl3, Griffins
 	    lvl4</li>
@@ -96,7 +96,7 @@
 	<li>Alignment: "Progress"</li>
 	<li>Magic Affiliations: +Earth, Mind / -Body</li>
 	<li>Territories Represented: AvLee, Tularea</li>
-	<li>Native Terrains: Grass, Dirt</li>
+	<li>Native Terrains: Grassland, Forest (+1 luck in Forest)</li>
 	<li>Native Heroes: Hunter, Druid</li>
 	<li><em>Updates:</em> Dendroids out, Halflings in, Centaurs to 2, Dwarves to 3, Elves to 4 & Pegasi to 5.</li>
 	<li>Ultimate: Spirit Guardian - +2 Luck to all native allied heroes, +1 to other allied heroes. Raises luck cap
@@ -133,7 +133,7 @@
 	<li>Alignment: "Progress"</li>
 	<li>Magic Affiliations: +Air, Water / -Earth</li>
 	<li>Territories Represented: Bracada</li>
-	<li>Native Terrains: Desert (formerly Rough), Snow</li>
+	<li>Native Terrains: Rough, Sand (no snow penalty)</li>
 	<li>Native Heroes: Wizard, Mechanic (formerly Alchemist)</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
@@ -171,7 +171,7 @@
 	<li>Alignment: "Natural Harmony"</li>
 	<li>Territories Represented: Krewlod</li>
 	<li>Magic Affiliations: +Fire, Spirit / -Air</li>
-	<li>Native Terrains: </li>
+	<li>Native Terrains: Rough, Savannah</li>
 	<li>Native Heroes: Barbarian, Warrior Mage</li>
 	<li><em>Updates:</em> Wolf Riders switched out for Wolves & swapped spots with Orcs. Ogres 2 choices for upgrades
 	(both can be built if desired, building 1 does not lock out the other).</li>
@@ -201,7 +201,7 @@
 	<li>Ogre Brutes/Ogre Warriors or Ogre Magi (can choose either, Warriors get speed/atk/hp upgrade, Magi get def
 			upg+spellcasting abilities)</li>
 	<li>Rocs/Roc Predators (very fast, flying, tough, bonus dmg against beasts)</li>
-	<li>Cyclopses /Cyclops Warriors (med fast, ranged, tough, can attack castle walls (1dmg reg/2dmg upg))</li>
+	<li>Cyclopses/Cyclops Warriors (med fast, ranged, tough, can attack castle walls (1dmg reg/2dmg upg))</li>
 	<li>Behemoths/Behemoth Razorclaws (faster than H3C by a bit, base tankier)</li>
 </ol>
 <h3>Fortress</h3>
@@ -210,7 +210,7 @@
 	<li>Alignment: "Natural Harmony"</li>
 	<li>Territories Represented: Tatalia</li>
 	<li>Magic Affiliations: +Earth, Water / -Fire</li>
-	<li>Native Terrains: Swamp, Mud (Dirt in rain), Bog (Grass in Rain)</li>
+	<li>Native Terrains: Swamp, Rough</li>
 	<li>Native Heroes: Beastkeeper, Shaman</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
@@ -290,9 +290,9 @@
 	<li>Alignment: "Destruction"</li>
 	<li>Territories Represented: Kreegan lands</li>
 	<li>Magic Affiliations: +Fire, Body / -Water</li>
-	<li>Native Terrains: Lava, Desert</li>
+	<li>Native Terrains: Lava, Sand</li>
 	<li>Native Heroes: Demon General, Summoner</li>
-	<li><em>Updates:</em> </li>
+	<li><em>Updates:</em> Efreet out, Pit Lords up to 6, Minion Devils in as flyers at 5.</li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
 	<li></li>
@@ -328,7 +328,7 @@
 	<li>Alignment - "Destruction"</li>
 	<li>Territories Represented: Deyja</li>
 	<li>Magic Affiliations: +Spirit, Death / -Life</li>
-	<li>Native Terrains: Desert, Subterranean</li>
+	<li>Native Terrains: Sand, Subterranean</li>
 	<li>Native Heroes: Death Knight, Necromancer</li>
 	<li><em>Updates:</em> Dread Knights out (too similar to the hero class), Zombies-Liches promoted 1lvl each,
 												Skeleton Archers added at Lvl2. Huge changes to necromancy (see Death Magic)</li>
