Huge rework of spells to synergize with changes to statuses, fleshed out statuses some more & updated the staff/wand attacks section of combat to reflect spell changes. Thru the elemental schools, will try to work on the self schools next (body especially needs work after all the cures were plucked out).

--- a/Combat.html
+++ b/Combat.html
@@ -12,13 +12,8 @@
   <li>Overall, attacking should be much like MMClassic, with a few exceptions: arrow attacks should do more damage
       thru a combo of might/accuracy effect, buff spells & new hit system (below); and, magic-heavy/exclusive
       classes should be able to cast a spell as a ranged attack thru a staff or wand.</li>
-  <li>Staff/wand attack: shoots a single-target bolt that deals damage of a selected magic school to the target. Must
-      know magic school to use that type of atk. Levels: Basic - 3 + 1d3 * skill level; Advanced - 5 + 1d3 * 2 *
-      skill level; Expert - 7 + 1d3 * 3 * skill level; Master - 10 + 1d4 * 4 * skill level; Grandmaster - 15 + 1d5 *
-      5 * skill level; SP cost: Basic - 1, Advanced - 2, Expert - 3, Master - 5, GM - 10. Additionally, Master makes
-      Basic attack free & Advanced cost 1, and GM makes Basic/Advanced free, Expert cost 1. Note that Life/Death
-      magic do not have individual resistances, but are simply coded as living things take 100% death dmg & are
-      healed 50% by Life dmg, undead are the inverse. Non-living but not undead (golems, etc.) are immune to both.</li>
+  <li>Staff/wand attack: casts the basic DD spell of a selected magic school at the target, reduced sp cost as
+      follows: Bas - 20%/Adv - 30%/Exp - 50%/Mas - 75%/GM - 100%. Must know magic school to use that type of atk.</li>
 </ul>
 <h3>Hit Rate & Bonus Mechanics</h3>
 <ul>
