Fully (I think) flushed out self magics. 1 less basic for each just 'cause I'm out of ideas honestly. Still 2 free spells though I think. Liking the synergy & design thus far, feels like there is a way for it all to work together.

--- a/Status.html
+++ b/Status.html
@@ -32,12 +32,12 @@
       <td>10% AS slow, 20% MS slow</td><td>20%/40%</td><td>40%/80%</td></tr>
   <tr><td>Poison</td><td>Water</td><td>Slightly Poisoned</td><td>Strongly Poisoned</td><td>Envenomed</td>
       <td>Small DoT to current hp</td><td>Med DoT</td><td>Large DoT</td></tr>
-  <tr><td>Disease</td><td>Body</td><td>Sick</td><td>Ill</td><td>Diseased</td>
+  <tr><td>Disease</td><td>Body</td><td>Sick</td><td>Diseased</td><td>Plagued</td>
       <td>Small hit to current max HP</td><td>Med hit</td><td>Large hit</td></tr>
   <tr><td>Fear</td><td>Mind</td><td>Afraid</td><td>Intimidated</td><td>Terrified</td>
-      <td>25% chance to fail phys melee atk</td><td>50%</td><td>100%</td></tr>
+      <td>25% chance to fail phys melee atk</td><td>50%</td><td>75%</td></tr>
   <tr><td>Curse</td><td>Spirit</td><td>Jinxed</td><td>Cursed</td><td>Hexed</td>
-      <td>25% chance to fail spell/ranged atk</td><td>50%</td><td>100%</td></tr>
+      <td>25% chance to fail spell/ranged atk</td><td>50%</td><td>75%</td></tr>
   <tr><td>Fatigue</td><td>Life/Death</td><td>Weary</td><td>Fatigued</td><td>Completely Drained</td>
       <td>25% reduction to all stats</td><td>50%</td><td>90%</td></tr>
 </table>
